--- a/core/component/css/component.default.css
+++ b/core/component/css/component.default.css
@@ -45,7 +45,7 @@ button {
   white-space: nowrap;
   text-overflow: ellipsis;
   box-sizing: border-box;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 button:hover {
   background: #34373c;
@@ -117,7 +117,7 @@ a {
   text-decoration: none;
   border-bottom: 1px solid #72b1f8;
   color: #72b1f8;
-  transition: all 0.2s ease-in-out, border 0.03s ease-in-out;
+  transition: all 0.16s ease-in-out, border 0.03s ease-in-out;
 }
 a:hover {
   border-bottom: 1px solid #84baf8;
@@ -139,7 +139,7 @@ a:active {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 .mono-icon-input i[activity='true']:hover {
   color: #dadfe7;
@@ -156,7 +156,7 @@ input {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 input::-webkit-input-placeholder {
   color: #56595e;
@@ -180,7 +180,7 @@ input[type='stadium'] {
   border-radius: 50%;
   background: #dadfe7;
   pointer-events: none;
-  transition: all 0.1s ease;
+  transition: all 0.16s ease;
 }
 .switcher:checked {
   background: #3d92f6;
@@ -209,7 +209,7 @@ input[type='range']::-webkit-slider-thumb {
   width: 12px;
   border-radius: 50%;
   background: #4d5053;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 input[type='range']::-webkit-slider-thumb:hover {
   background: #dadfe7;
@@ -220,7 +220,7 @@ input[type='range']::-webkit-slider-thumb:hover {
   border-radius: 4px;
   background: #2d3035;
   box-shadow: 0px 1.6px 3.6px #00000041, 0px 0px 2.9px #00000037;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 .menu {
   display: inline-block;
@@ -247,7 +247,7 @@ input[type='range']::-webkit-slider-thumb:hover {
   justify-items: center;
   list-style-type: none;
   grid-template-rows: auto;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 .menuitem i {
   font-size: 16px;
@@ -282,7 +282,7 @@ input[type='range']::-webkit-slider-thumb:hover {
 .select {
   position: relative;
   display: inline-block;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
 }
 .select .arrow-down {
   cursor: pointer;
@@ -330,9 +330,6 @@ input[type='range']::-webkit-slider-thumb:hover {
 /**   List  */
 /************/
 .mono-list-subtitle {
-  font-size: 1.5rem;
-  font-weight: bold;
-  letter-spacing: 0.12rem;
   color: #56595e;
   text-align: center;
   margin: 20px 0 8px 0;
@@ -354,7 +351,7 @@ input[type='range']::-webkit-slider-thumb:hover {
   box-sizing: border-box;
   background: #2d3035;
   box-shadow: 0px 1.6px 3.6px #00000041, 0px 0px 2.9px #00000037;
-  transition: background 0.2s ease-in-out;
+  transition: background 0.16s ease-in-out;
 }
 .mono-list-widget li:hover,
 .mono-list-widget .mono-list-item:hover {
@@ -378,7 +375,7 @@ input[type='range']::-webkit-slider-thumb:hover {
   cursor: pointer;
   border-radius: 4px;
   padding: 10px 20px;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.16s ease-in-out;
   overflow: hidden;
 }
 .mono-list-view li:hover,
@@ -528,8 +525,25 @@ input {
   box-sizing: border-box;
   overflow: hidden;
 }
+.mono-active-control {
+  cursor: pointer;
+  transition: all 0.16s ease-in-out;
+}
+.mono-active-control:hover {
+  background: #34373c;
+}
+.mono-active-control:active {
+  background: #3f4247;
+}
 .mono-scroll-view {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
+}
+/** Grid View */
+.mono-grid-view {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 50px);
+  grid-template-rows: repeat(auto-fill, 50px);
+  grid-gap: 10px;
 }
