--- a/core/style/style.default.css
+++ b/core/style/style.default.css
@@ -12,6 +12,20 @@ body {
   height: 100%;
   background: #22252a;
 }
+h2 {
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 0.16rem;
+}
+h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 0.12rem;
+}
+h4 {
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+}
 svg {
   fill: #dadfe7;
 }
@@ -167,6 +181,8 @@ ul {
 .aproch-app-view {
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-rows: 64px auto;
 }
 .aproch-header {
   height: 64px;
@@ -180,25 +196,18 @@ ul {
   letter-spacing: 1rem;
   user-select: none;
   text-align: center;
-  line-height: 34px;
+  line-height: 44px;
+  margin: 10px;
 }
 .aproch-main-view {
   width: 100%;
   height: 100%;
   position: relative;
+  display: grid;
+  grid-template-columns: 80px 220px auto 270px;
 }
 .nav {
-  width: 80px;
-  height: 100%;
   border-right: 1px solid #33363b;
-}
-.sidebar {
-  width: 220px;
-  height: 100%;
-}
-.sidebar-r {
-  width: 270px;
-  height: 100%;
 }
 .left {
   float: left;
@@ -219,6 +228,7 @@ ul {
   position: absolute;
   width: 6px;
   height: 100%;
+  z-index: 9999;
 }
 .split-h {
   position: absolute;
@@ -236,6 +246,9 @@ ul {
 .aproch-icon-a {
   font-family: 'Graven';
 }
+.std-text {
+  color: #dadfe7;
+}
 .sub-text {
   color: #86898e;
 }
@@ -251,16 +264,12 @@ ul {
 #aproch-nav li,
 #aproch-nav .mono-list-item {
   height: 64px;
-  transition: all 0.16s ease-in-out;
+  border-radius: 0 !important;
 }
 #aproch-nav li i,
 #aproch-nav .mono-list-item i {
   color: #86898e;
   font-size: 1.5rem;
-}
-#aproch-nav li:hover,
-#aproch-nav .mono-list-item:hover {
-  background-color: #34373c;
 }
 #aproch-nav .mono-list-item-selected * {
   color: #3d92f6 !important;
@@ -337,4 +346,26 @@ ul {
   color: #dadfe7;
   font-size: 0.8rem !important;
   background: #4d5053;
+}
+#aproch-home-template {
+  padding: 15px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  grid-template-columns: repeat(auto-fill, 150px);
+  grid-template-rows: repeat(auto-fill, 150px);
+  grid-gap: 15px;
+}
+#aproch-home-template li {
+  padding: 15px;
+  position: relative;
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+#aproch-home-template li i {
+  font-size: 4.5rem;
+  margin: 10px 10px 20px 10px;
+}
+#aproch-home-template .mono-list-item-selected {
+  border: 2px solid #3d92f6;
 }
