--- a/core/style/style.default.less
+++ b/core/style/style.default.less
@@ -16,6 +16,21 @@ body {
     background: @controlBgDarkColor;
 }
 
+h2 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    letter-spacing: 0.16rem;
+}
+h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    letter-spacing: 0.12rem;
+}
+h4 {
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+}
+
 svg {
     fill: @textColor;
 }
@@ -191,6 +206,8 @@ ul {
 .aproch-app-view {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-rows: 64px auto;
 }
 
 .aproch-header {
@@ -206,27 +223,20 @@ ul {
     letter-spacing: 1rem;
     user-select: none;
     text-align: center;
-    line-height: 34px;
+    line-height: 44px;
+    margin: 10px;
 }
 
 .aproch-main-view {
     width: 100%;
     height: 100%;
     position: relative;
+    display: grid;
+    grid-template-columns: 80px 220px auto 270px;
 }
 
 .nav {
-    width: 80px;
-    height: 100%;
     border-right: 1px solid @splitColor;
-}
-.sidebar {
-    width: 220px;
-    height: 100%;
-}
-.sidebar-r {
-    width: 270px;
-    height: 100%;
 }
 
 .left {
@@ -251,6 +261,7 @@ ul {
     position: absolute;
     width: 6px;
     height: 100%;
+    z-index: 9999;
 }
 .split-h {
     position: absolute;
@@ -270,6 +281,10 @@ ul {
     font-family: 'Graven';
 }
 
+.std-text {
+    color: @textColor;
+}
+
 .sub-text {
     color: @subTextColor;
 }
@@ -281,23 +296,18 @@ ul {
     .aproch-icon-a {
         color: @subTextColor;
         font-size: 1.9rem;
-        transition: all 0.16s ease-in-out;
+        transition: @stdTransition;
     }
 
     li,
     .mono-list-item {
         height: 64px;
-        transition: all 0.16s ease-in-out;
+        border-radius: 0 !important;
 
         i {
             color: @subTextColor;
             font-size: 1.5rem;
         }
-    }
-
-    li:hover,
-    .mono-list-item:hover {
-        background-color: @controlBgHoverColor;
     }
 
     .mono-list-item-selected * {
@@ -348,7 +358,7 @@ ul {
         i {
             color: @subTextColor;
             font-size: 1.4rem;
-            transition: all 0.16s ease-in-out;
+            transition: @stdTransition;
         }
     }
 
@@ -365,7 +375,7 @@ ul {
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
-        transition: all 0.16s ease-in-out;
+        transition: @stdTransition;
     }
 
     .list-item-icon {
@@ -393,4 +403,30 @@ ul {
     color: @textColor;
     font-size: 0.8rem !important;
     background: @controlBgLightColor;
+}
+
+#aproch-home-template {
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    grid-template-columns: repeat(auto-fill, 150px);
+    grid-template-rows: repeat(auto-fill, 150px);
+    grid-gap: 15px;
+
+    li {
+        padding: 15px;
+        position: relative;
+        border-radius: @stdRadius;
+        border: 2px solid transparent;
+
+        i {
+            font-size: 4.5rem;
+            margin: 10px 10px 20px 10px;
+        }
+    }
+
+    .mono-list-item-selected {
+        border: 2px solid @primaryColor;
+    }
 }
