--- a/core/style/style.default.css
+++ b/core/style/style.default.css
@@ -163,7 +163,7 @@ ul {
 ::-webkit-scrollbar {
   width: 9px;
   height: 9px;
-  background-color: transparent;
+  background-color: #22252a;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
@@ -182,13 +182,25 @@ ul {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 64px auto;
+  grid-template-rows: 40px auto;
 }
-.aproch-header {
-  height: 64px;
+.aproch-titlebar {
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid #33363b;
 }
-.aproch-caption {
+.titlebar-drag-region {
+  top: 0;
+  left: 0;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-app-region: drag;
+}
+.window-title {
   position: relative;
   color: #86898e;
   font-family: 'Dejavu Sans Mono';
@@ -198,6 +210,28 @@ ul {
   text-align: center;
   line-height: 44px;
   margin: 10px;
+}
+.window-controls-container {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  text-align: center;
+  position: relative;
+  z-index: 3000;
+  -webkit-app-region: no-drag;
+  height: 100%;
+  margin-left: auto;
+}
+.window-controls-container .window-icon {
+  width: 32px;
+  color: #86898e;
+}
+.window-controls-container .window-icon:hover {
+  background: #34373c;
+}
+.window-controls-container .window-icon:active {
+  color: #dadfe7;
+  background: #22252a;
 }
 .aproch-main-view {
   width: 100%;
